Microservices/ingress/unused/ingress-old.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/add-base-url : "true"
    #kubernetes.io/ingress.global-static-ip-name: "ingress-webapps"
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: "34.136.99.99.nip.io"
    http:
      paths:
      # - path: "/"
      #   pathType: ImplementationSpecific
      #   backend:
      #     service:
      #       name: nginx-service
      #       port:
      #         number: 80
      # - path: "/"
      #   pathType: ImplementationSpecific
      #   backend:
      #     service:
      #       name: phpmyadmin-service-internal
      #       port:
      #         number: 80
      - path: "/phpmyadmin(/|$)(.*)"
        pathType: ImplementationSpecific
        backend:
          service:
            name: phpmyadmin-service-internal
            port:
              number: 80
